--- a/packages/shop/src/data/translation/ar.json
+++ b/packages/shop/src/data/translation/ar.json
@@ -163,7 +163,7 @@
   "intlArabic": "عربى",
   "intlChinese": "صينى",
   "intlEnglish": "الإنجليزية",
-  "intlGerman": "ألمانية",
+  "intlGerman": "الفرنسية",
   "intlHebrew": "اللغة العبرية",
   "intlSpanish": "الأسبانية",
   "navLinkHome": "الصفحة الرئيسية",
