--- a/packages/shop/src/data/translation/ar.json
+++ b/packages/shop/src/data/translation/ar.json
@@ -81,7 +81,7 @@
   "savedAddressId": "حفظ العنوان",
 
   "paymentCardTitle": "بطاقة المدفوعات",
-  "siteFooter": "Pickbazar هو منتج من قبل",
+  "siteFooter": "chario هو منتج من قبل",
   "subTotal": "المجموع الفرعي",
   "itemsText": "العناصر",
   "shippinFeeText": "رسوم الشحن",
@@ -120,7 +120,7 @@
   "signUpBtnText": "سجل",
   "forgotPasswordText": "نسيت رقمك السري؟",
   "resetText": "إعادة تعيينها",
-  "signUpText": "بالتسجيل ، أنت توافق على Pickbazar",
+  "signUpText": "بالتسجيل ، أنت توافق على chario",
   "termsConditionText": "الشروط والأحكام",
   "alreadyHaveAccount": "هل لديك حساب؟",
   "backToSign": "ارجع الى",
