--- a/packages/shop/src/data/translation/en.json
+++ b/packages/shop/src/data/translation/en.json
@@ -73,7 +73,7 @@
   "savedCardsId": "Saved Cards",
   "savedContactId": "Save Contact",
   "savedAddressId": "Save Address",
-  "siteFooter": "Pickbazar is a product by",
+  "siteFooter": "chario is a product by",
   "subTotal": "Sub Total",
   "itemsText": "items",
   "shippinFeeText": "Shipping Fee",
@@ -112,7 +112,7 @@
   "signUpBtnText": "Sign Up",
   "forgotPasswordText": "Forgot your password?",
   "resetText": "Reset It",
-  "signUpText": "By signing up, you agree to Pickbazar's",
+  "signUpText": "By signing up, you agree to chario's",
   "termsConditionText": "Terms & Condtion",
   "alreadyHaveAccount": "Already have an account?",
   "backToSign": "Back to",
