--- a/packages/shop/src/data/translation/fr.json
+++ b/packages/shop/src/data/translation/fr.json
@@ -73,7 +73,7 @@
   "savedCardsId": "Cartes enregistrées",
   "savedContactId": "Enregistrer le contact",
   "savedAddressId": "Enregistrer l'adresse",
-  "siteFooter": "Pickbazar est un produit de",
+  "siteFooter": "chario est un produit de",
   "sous-total": "sous-total",
   "itemsText": "items",
   "shippinFeeText": "Frais d'expédition",
@@ -112,7 +112,7 @@
   "signUpBtnText": "S'inscrire",
   "ForgotPasswordText": "Vous avez oublié votre mot de passe?",
   "resetText": "Réinitialiser",
-  "signUpText": "En vous inscrivant, vous acceptez Pickbazar's",
+  "signUpText": "En vous inscrivant, vous acceptez chario's",
   "termsConditionText": "Conditions générales",
   "alreadyHaveAccount": "Vous avez déjà un compte?",
   "backToSign": "Retour à",
